fixed button spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -231,6 +231,7 @@ h1 {
   padding-bottom: 0.8em;
   padding-left: 1.1em;
   padding-right: 1.1em;
+  margin-right: 1%;
 
 }
 
